# TESIS

./: README.md
catkin_ws/: README.md
catkin_ws/src/common/: CMakeLists.txt  package.xml
catkin_ws/src/common/action/: GoalDist.action  GoalDistAngle.action  GoalPath.action  GoalPose.action  GoalPotentialFields.action  MotionPlannerSym.action
catkin_ws/src/common/include/common/: EnvironmentUtil.h  LaserScanUtil.h  NavigationUtil.h  PathPlanningUtil.h  PointClickSubscriber.h  definition.h  dijkstra.h  first_depth.h  intersectionTest.h  parserFileWRL.h  queue.h  triangulateVertex.h  utilMap.h  utilSimulator.h  utilViz.h  utilVoronoi.h
catkin_ws/src/common/src/: EnvironmentUtil.cpp  LaserScanUtil.cpp  NavigationUtil.cpp  PathPlanningUtil.cpp  PointClickSubscriber.cpp  TestNavigation.cpp
catkin_ws/src/common/srv/: Environment.srv  GoalDist.srv  GoalDistAngle.srv  GoalPath.srv  GoalPose.srv  MotionPlannerLoc.srv  MotionPlannerXYA.srv  PathPlanning.srv
catkin_ws/src/environment/: CMakeLists.txt  package.xml
catkin_ws/src/environment/filesWRL/: bioroboticsmap.wrl  random_1.wrl  test_world.wrl
catkin_ws/src/environment/src/: environment.cpp
catkin_ws/src/hardware/arms/: CMakeLists.txt  CMakeLists.txt~
catkin_ws/src/hardware/arms/scripts/: right_arm_simul_node.py
catkin_ws/src/hardware/head/: CMakeLists.txt
catkin_ws/src/hardware/laser_simul/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/laser_simul/src/: laser_scan_publisher.cpp
catkin_ws/src/hardware/mobile_base/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/mobile_base/scripts/: omni_base_simul_node.py
catkin_ws/src/hardware/torso/scripts/: torso_simul_node.py
catkin_ws/src/knowledge/: CMakeLists.txt  package.xml
catkin_ws/src/knowledge/locations/: known_locations.txt  known_locations_2.txt
catkin_ws/src/knowledge/occupancy_grids/: biorobotica_simul.pgm  biorobotica_simul.yaml  bioroboticsmap_simul.pgm  bioroboticsmap_simul.yaml  bioroboticsmap_simul_2.pgm  bioroboticsmap_simul_2.yaml  random_1_simul.pgm  random_1_simul.yaml
catkin_ws/src/knowledge/rviz/: rviz_mapping.rviz  rviz_navigation.rviz
catkin_ws/src/knowledge/urdf/: justina.xml
catkin_ws/src/knowledge/wrl/: bioroboanexo.wrl  bioroboanexo_unknown.wrl  bioroboticsmap.wrl  bioroboticsmap_unknown.wrl  hugo_map.wrl  random_1_unknown.wrl  roomPlanning.wrl  test_world2.wrl
catkin_ws/src/launch/: package.xml
catkin_ws/src/launch/launch/: costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  justina.launch  justina_simul.launch  local_costmap_params.yaml  mapping.launch  mapping.launch~  params.yaml  params.yaml~  robot_justina.launch  robot_justina.launch~
catkin_ws/src/navigation/: CMakeLists.txt  package.xml
catkin_ws/src/navigation/include/navigation/: PotentialFields.h
catkin_ws/src/navigation/src/: BasicMotionActions.cpp  BasicMotionActions.cpp.resp  LowLevelControl.cpp  PotentialFields.cpp  potential_filds.cpp
catkin_ws/src/planning/motion_planner/: CMakeLists.txt  package.xml
catkin_ws/src/planning/motion_planner/src/: motion_planner.cpp
catkin_ws/src/planning/path_planning/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
catkin_ws/src/planning/path_planning/include/path_planning/: VoronoiPlanner.h
catkin_ws/src/planning/path_planning/src/: VoronoiPlanner.cpp  VoronoiPlanner.cpp~  path_planning.cpp
